# react-native-template

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
app/: .env.example  .gitignore  CLAUDE.md  app.json  eas.json  jest.config.js  jest.integration.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
app/src/: CLAUDE.md
backend/: .env.example  .env.test.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
backend/app/: CLAUDE.md  main.py
backend/app/api/: CLAUDE.md
backend/app/api/v1/: CLAUDE.md  auth.py  notes.py  notifications.py  profile.py  router.py  storage.py  todos.py
backend/app/core/: CLAUDE.md  auth.py  config.py  notifications.py  supabase.py
backend/app/schemas/: CLAUDE.md  auth.py  notes.py  notifications.py  profile.py  storage.py  todos.py
backend/tests/: CLAUDE.md  conftest.py  test_auth.py  test_health.py  test_notes.py  test_notifications.py  test_profile.py  test_schemas.py  test_storage.py  test_todos.py
backend/tests/integration/: CLAUDE.md  conftest.py  test_auth_integration.py  test_health_integration.py  test_notes_integration.py  test_notifications_integration.py  test_profile_integration.py  test_storage_integration.py  test_todos_integration.py
docs/: 01-architecture.md  02-tech-stack.md  03-frontend-guide.md  04-backend-guide.md  05-database-schema.md  06-testing-strategy.md  07-setup-guide.md  08-api-reference.md  09-deployment-mobile.md  10-deployment-backend.md  11-supabase-setup.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  activity-log.md  valuable_notes.md
supabase/: CLAUDE.md  config.toml
(+86 files in other folders)
